--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   },
   "dependencies": {
     "@cloudflare/pages-plugin-sentry": "^1.1.3",
+    "@pnpm/make-dedicated-lockfile": "^0.6.16",
     "@sentry/tracing": "^7.114.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
-    "mocha": "^10.6.0",
-    "wait-on": "^7.2.0",
-    "wrangler": "^3.63.0"
+    "mocha": "^10.7.3",
+    "wait-on": "^8.0.0",
+    "wrangler": "^3.72.3"
   }
 }
