--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "@aws-sdk/client-s3": "^3.726.1",
     "@cloudflare/pages-plugin-sentry": "^1.1.3",
     "@sentry/tracing": "^7.114.0",
-    "miniflare": "^3.20240718.0",
-    "sharp": "^0.33.5"
+    "miniflare": "^3.20240718.0"
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
