--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
-node_modules/.bin/*
-node_modules/.mf/*
-.wrangler/*
-data/*
+.DS_Store
 node_modules
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
